--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   url_launcher:
   date_picker_timeline: ^1.2.5
   flutter_datetime_picker_bdaya: ^3.0.2
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
