--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,6 @@ flutter:
   uses-material-design: true
   assets:
     - assets/flags/
-    - assets/icons/
+#    - assets/icons/
     - assets/services/
     - assets/
